test/error/iocheck/err2.rzy
// Error: response is not allowed to write state

component
  Err2
    response what():R{0,100};
    
  implementation elementary
    
    var
      a : R{0,100} = 0;
    
    response what():R{0,100}
      a := 42;
      return 0;
    end
    
  end

